--- a/xmonad-config-matthias/stack.yaml
+++ b/xmonad-config-matthias/stack.yaml
@@ -4,8 +4,8 @@
 # For advanced use and comprehensive documentation of the format, please see:
 # https://docs.haskellstack.org/en/stable/yaml_configuration/
 
-# resolver: lts-22.35
-resolver: nightly-2024-09-26
+resolver: lts-23.1
+# resolver: nightly-2024-12-17
 
 # User packages to be built.
 # Various formats can be used as shown in the example below.
